<resources>
    <string name="app_name">Assignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="new_game">New Game</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="statusMessage">LoginFeedback</string>
    <string name="login_text">Login</string>
    <string name="LoginFeedback">Login Feedback</string>
    <string name="Login">Login</string>
    <string name="ImageButton">Image Button</string>
    <string name="NoughtsCrosses">Noughts and Crosses Image</string>
    <string name="Enter">Login</string>
    <string name="NewUser">New User</string>
    <string name="txtNewUserFeedback">Add User Feedback</string>
</resources>
