<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_grid" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:layout_marginTop="5dp"
    android:baselineAligned="false">
    <TableRow android:gravity="center_horizontal">
        <Button android:id="@+id/one" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/one"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/two" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/two"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/three" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/three"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button android:id="@+id/four" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/four"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/five" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/five"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/six" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/six"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button android:id="@+id/seven" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/seven"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/eight" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/eight"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
        <Button android:id="@+id/nine" android:layout_width="100dp"
            android:layout_height="100dp" android:text="@string/nine"
            android:textSize="70sp"
            android:textAppearance="@android:color/holo_blue_bright" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:id="@+id/new_game" android:layout_width="100dp"
            android:layout_height="50dp" android:text="@string/new_game"
            android:textSize="20sp"
            android:layout_column="1"
            android:layout_span="2"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TableRow></TableRow>

</TableLayout>
