<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/Wrapper"
    android:background="@drawable/images">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="125dp"
        android:layout_weight="0.20">

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:labelFor="@+id/userName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editUserName" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:labelFor="@+id/userName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/txtLoginFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginFeedback"
            android:labelFor="@+id/userName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Login"
                        android:id="@+id/btnLogin"
                        android:layout_gravity="right"
                        android:layout_weight="0.20" />
                </TableRow>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewUser"
                    android:id="@+id/btnNewUser"
                    android:layout_gravity="right" />
            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>